syntax = "proto3";

package retrom;

import 'models/emulators.proto';
import 'models/game-files.proto';
import 'models/games.proto';
import 'models/metadata.proto';
import 'models/platforms.proto';
import 'providers/igdb.proto';

service LibraryService {
  rpc UpdateLibrary(UpdateLibraryRequest) returns (UpdateLibraryResponse);
  rpc UpdateLibraryMetadata(UpdateLibraryMetadataRequest) returns (stream UpdateLibraryMetadataResponse);
  rpc DeleteLibrary(DeleteLibraryRequest) returns (DeleteLibraryResponse);
}

service PlatformService {
  rpc GetPlatforms(GetPlatformsRequest) returns (GetPlatformsResponse);
  rpc DeletePlatforms(DeletePlatformsRequest) returns (DeletePlatformsResponse);
}

service GameService {
  rpc GetGames(GetGamesRequest) returns (GetGamesResponse);
  rpc DeleteGames(DeleteGamesRequest) returns (DeleteGamesResponse);
}

service MetadataService {
  rpc GetGameMetadata(GetGameMetadataRequest) returns (GetGameMetadataResponse);
  rpc UpdateGameMetadata(UpdateGameMetadataRequest) returns (UpdateGameMetadataResponse);

  rpc GetPlatformMetadata(GetPlatformMetadataRequest) returns (GetPlatformMetadataResponse);
  rpc UpdatePlatformMetadata(UpdatePlatformMetadataRequest) returns (UpdatePlatformMetadataResponse);

  rpc GetIgdbSearch(GetIgdbSearchRequest) returns (GetIgdbSearchResponse);
  rpc GetIgdbGameSearchResults(GetIgdbGameSearchResultsRequest) returns (GetIgdbGameSearchResultsResponse);
  rpc GetIgdbPlatformSearchResults(GetIgdbPlatformSearchResultsRequest) returns (GetIgdbPlatformSearchResultsResponse);
}

service EmulatorService {
  rpc CreateEmulators(CreateEmulatorsRequest) returns (CreateEmulatorsResponse);
  rpc GetEmulators(GetEmulatorsRequest) returns (GetEmulatorsResponse);
  rpc UpdateEmulators(UpdateEmulatorsRequest) returns (UpdateEmulatorsResponse);
  rpc DeleteEmulators(DeleteEmulatorsRequest) returns (DeleteEmulatorsResponse);

  rpc CreateEmulatorProfiles(CreateEmulatorProfilesRequest) returns (CreateEmulatorProfilesResponse);
  rpc GetEmulatorProfiles(GetEmulatorProfilesRequest) returns (GetEmulatorProfilesResponse);
  rpc UpdateEmulatorProfiles(UpdateEmulatorProfilesRequest) returns (UpdateEmulatorProfilesResponse);
  rpc DeleteEmulatorProfiles(DeleteEmulatorProfilesRequest) returns (DeleteEmulatorProfilesResponse);

  rpc GetDefaultEmulatorProfiles(GetDefaultEmulatorProfilesRequest) returns (GetDefaultEmulatorProfilesResponse);
  rpc UpdateDefaultEmulatorProfiles(UpdateDefaultEmulatorProfilesRequest) returns (UpdateDefaultEmulatorProfilesResponse);
  rpc DeleteDefaultEmulatorProfiles(DeleteDefaultEmulatorProfilesRequest) returns (DeleteDefaultEmulatorProfilesResponse);
}

message UpdateLibraryRequest {}

message UpdateLibraryResponse {
  repeated Platform platforms_populated = 1;
  repeated Game games_populated = 2;
  repeated GameFile game_files_populated = 3;
}

message UpdateLibraryMetadataRequest {
  optional bool overwrite = 1;
}

message UpdateLibraryMetadataResponse {
  message GameMetadataProgress {
    // map of game_id to metadata
    repeated int32 game_ids_updated = 1;
    repeated int32 game_ids_failed = 2;
    uint32 total_games = 3;
  }

  message PlatformMetadataProgress {
    // map of platform_id to metadata
    repeated int32 platform_ids_updated = 1;
    repeated int32 platform_ids_failed = 2;
    uint32 total_platforms = 3;
  }

  GameMetadataProgress game_metadata_progress = 1;
  PlatformMetadataProgress platform_metadata_progress = 2;
}

message GetPlatformsRequest {
  repeated int32 ids = 1;
  optional bool with_metadata = 2;
}

message GetPlatformsResponse {
  repeated Platform platforms = 1;
  repeated PlatformMetadata metadata = 2;
}

message GetGamesRequest {
  repeated int32 platform_ids = 1;
  repeated int32 ids = 2;
  optional bool with_metadata = 3;
  optional bool with_files = 4;
}

message GetGamesResponse {
  repeated Game games = 1;
  repeated GameMetadata metadata = 2;
  repeated GameFile game_files = 3;
}

message GetGameMetadataRequest {
  repeated int32 game_ids = 1;
}

message GetGameMetadataResponse {
  message GameGenres {
    repeated GameGenre value = 1;
  }

  message SimilarGames {
    repeated Game value = 1;
  }

  repeated GameMetadata metadata = 1;
  map<int32, SimilarGames> similar_games = 2;
  map<int32, GameGenres> genres = 3;
}

message GetPlatformMetadataRequest {
  repeated int32 platform_ids = 1;
}

message GetPlatformMetadataResponse {
  repeated PlatformMetadata metadata = 1;
}

message GetIgdbGameSearchResultsRequest {
  IgdbGameSearchQuery query = 1;
}

message GetIgdbGameSearchResultsResponse {
  repeated NewGameMetadata metadata = 1;
}

message UpdateGameMetadataRequest {
  repeated UpdatedGameMetadata metadata = 1;
}

message UpdateGameMetadataResponse {
  repeated GameMetadata metadata_updated = 1;
}

message GetIgdbPlatformSearchResultsRequest {
  IgdbPlatformSearchQuery query = 1;
}

message GetIgdbPlatformSearchResultsResponse {
  repeated NewPlatformMetadata metadata = 1;
}

message UpdatePlatformMetadataRequest {
  repeated UpdatedPlatformMetadata metadata = 1;
}

message UpdatePlatformMetadataResponse {
  repeated PlatformMetadata metadata_updated = 1;
}

// Arbitrary search query for IGDB
message GetIgdbSearchRequest {
  enum IgdbSearchType {
    GAME = 0;
    PLATFORM = 1;
  }

  IgdbSearchType search_type = 1;
  optional IgdbSearch search = 2;
  optional IgdbPagination pagination = 3;
  optional IgdbFilters filters = 4;
  optional IgdbFields fields = 5;
}

message IgdbSearchGameResponse {
  repeated NewGameMetadata games = 1;
}

message IgdbSearchPlatformResponse {
  repeated NewPlatformMetadata platforms = 1;
}

message GetIgdbSearchResponse {
  oneof search_results {
    IgdbSearchGameResponse game_matches = 1;
    IgdbSearchPlatformResponse platform_matches = 2;
  }
}

message DeleteLibraryRequest {}

message DeleteLibraryResponse {}

message DeletePlatformsRequest {
  repeated int32 ids = 1;
}

message DeletePlatformsResponse {}

message DeleteGamesRequest {
  repeated int32 ids = 1;
}

message DeleteGamesResponse {}

message CreateEmulatorsRequest {
  repeated NewEmulator emulators = 1;
}

message CreateEmulatorsResponse {
  repeated Emulator emulators_created = 1;
}

message GetEmulatorsRequest {
  repeated int32 ids = 1;
  repeated int32 supported_platform_ids = 2;
}

message GetEmulatorsResponse {
  repeated Emulator emulators = 1;
}

message UpdateEmulatorsRequest {
  repeated UpdatedEmulator emulators = 1;
}

message UpdateEmulatorsResponse {
  repeated Emulator emulators_updated = 1;
}

message DeleteEmulatorsRequest {
  repeated int32 ids = 1;
}

message DeleteEmulatorsResponse {
  repeated Emulator emulators_deleted = 1;
}

message CreateEmulatorProfilesRequest {
  repeated NewEmulatorProfile profiles = 1;
}

message CreateEmulatorProfilesResponse {
  repeated EmulatorProfile profiles_created = 1;
}

message GetEmulatorProfilesRequest {
  repeated int32 ids = 1;
  repeated int32 emulator_ids = 2;
}

message GetEmulatorProfilesResponse {
  repeated EmulatorProfile profiles = 1;
}

message UpdateEmulatorProfilesRequest {
  repeated UpdatedEmulatorProfile profiles = 1;
}

message UpdateEmulatorProfilesResponse {
  repeated EmulatorProfile profiles_updated = 1;
}

message DeleteEmulatorProfilesRequest {
  repeated int32 ids = 1;
}

message DeleteEmulatorProfilesResponse {
  repeated EmulatorProfile profiles_deleted = 1;
}

message GetDefaultEmulatorProfilesRequest {
  repeated int32 platform_ids = 1;
}

message GetDefaultEmulatorProfilesResponse {
  repeated DefaultEmulatorProfile default_profiles = 1;
}

message UpdateDefaultEmulatorProfilesRequest {
  repeated UpdatedDefaultEmulatorProfile default_profiles = 1;
}

message UpdateDefaultEmulatorProfilesResponse {
  repeated DefaultEmulatorProfile default_profiles_updated = 1;
}

message DeleteDefaultEmulatorProfilesRequest {
  repeated int32 platform_ids = 1;
}

message DeleteDefaultEmulatorProfilesResponse {
  repeated DefaultEmulatorProfile default_profiles_deleted = 1;
}

